Alterando TerrariaWiki para TerrariaFlixx

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Londrina+Sketch&display=swap" rel="stylesheet">
 </head>
 
-<title>TerrariaWiki</title>
+<title>TerrariaFlixx</title>
 
 
 
 <body>
 
 
-    <header>TerrariaWiki</header>
+    <header>TerrariaFlixx</header>
 
 
     
